# cafe-pos-dev

./: .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  HANDOFF_2026-06-06_modifier-recipe-items-and-shopping-list-qty.md  HANDOFF_2026-06-06_routes-and-modifier-recipe-items.md  HANDOFF_CATALOG_ADMIN.md  HANDOFF_PRINT_SETUP.md  api-handoff (1).md  api-handoff (3).md  api-handoff.md  daily-order-number-handoff.md  handoff.md  message.txt  package.json  print-server.js  receipt-lot-total-price-ux-handoff.md  receipt-lot-unit-price-handoff.md  remove-autostart.bat  setup-autostart.bat  setup-autostart.ps1  start-bridge.bat  start.bat  sync-to-main.ps1  update-bridge.bat
caf-pos-repo-main/api/: .env.example  README.md  nixpacks.toml  pyproject.toml  railway.toml
caf-pos-repo-main/api/alembic/: env.py
caf-pos-repo-main/api/alembic/versions/: 0001_initial.py  0002_catalog.py  0003_orders.py  0004_customers.py  0005_order_fields.py  0006_operations_hr.py  0006_store_promptpay_id.py  0007_inventory_expiry_date.py  (+12 more)
caf-pos-repo-main/api/app/: config.py  deps.py  enums.py  main.py
caf-pos-repo-main/api/scripts/: seed.py  setup_modifier_groups.py
caf-pos-repo-main/api/tests/: conftest.py  factories.py  test_auth.py  test_catalog_service.py  test_customers_service.py  test_hr_api.py  test_inventory_api.py  test_inventory_service.py  test_membership.py  test_orders_service.py  test_pre_orders_api.py  test_production_api.py  test_promotions_api.py  test_receipts_api.py  test_reports_service.py  test_shopping_list_api.py  test_stock_takes_api.py  test_stock_takes_service.py
(+277 files in other folders)
